style.css
@import url('https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;700&display=swap');

body {
    /* font-family: 'JetBrains Mono', monospace; */
    /* font-family: 'Google Sans', sans-serif; */
    font-family: 'Source Code Pro', monospace;
    margin: 0;
    background-color: #000000;
    user-select: none;
}

p {
    margin: 0;
}

/* swal custom */
.swal2-popup {
    background-color: #181717 !important;
    border: 2px solid #969696 !important;
    color: aliceblue !important;
    border-radius: 15px !important;
    z-index: 999 !important;
}

.swal2-confirm {
    border-radius: 5px !important;
    background-color: #181717 !important;
    border: 2px solid #468259 !important;
}

.swal2-cancel{
    border-radius: 5px !important;
    background-color: #181717 !important;
    border: 2px solid #9e4141 !important;
}

.swal2-styled.swal2-confirm:focus {
    box-shadow: 0 0 0 0;
}

.swal2-show {
    animation: show .15s !important;
}

.swal2-hide {
    animation: hide .15s !important;
}

@keyframes show {
    0% {
        transform: scale(0.8);
        opacity: 0;
    }

    100% {
        transform: scale(1);
        opacity: 1;
    }
}


@keyframes hide {
    0% {
        transform: scale(1);
        opacity: 1
    }

    100% {
        transform: scale(0.8);
        opacity: 0
    }
}

.topnav {
    color: #FFFFFF;
    background-color: #262626;
    font-size: 23px;
    font-weight: bold;
    padding: 23px 20px;
    overflow: hidden;
}

.login {
    color: white;
    background-color: #181717;
    width: 90%;
    max-width: 550px;
    margin: 0 auto;
    margin-top: calc(50vh - 250px);
    border-radius: 20px;
    border: 3px solid #696969;
}

.login-title {
    font-size: 30px;
    font-weight: bold;
    text-align: center;
    margin: 15px 0;
}

.login-from {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.login-lable {
    font-size: 23px;
    margin-right: 10px;
    font-weight: bold;
    margin: auto 0;
}

.row {
    display: flex;
    margin-top: 15px;
}

hr.login-hr {
    width: 100%;
    border: 0;
    height: 3px;
    background: #696969;
}

.textbox {
    border: 0;
    border-radius: 10px;
    padding: 10px 20px;
    font-size: 15px;
    margin: 0 10px;
    background-color: #696969;
    color: white;
}

.btn {
    font-size: 20px;
    font-weight: bold;
    border: 0;
    border-radius: 10px;
    padding: 8px 10px;
    cursor: pointer;
}

.login-btn {
    background-color: #34a054;
    color: #FFFFFF;
    margin-top: 30px;
    margin-bottom: 15px;
    width: 40%;
}

.logout-btn {
    background-color: #9e4141;
    color: #FFFFFF;
    top: 17px;
    right: 30px;
    padding: 8px 15px;
    position: absolute;
}

.connect-btn {
    background-color: #2f8a4a;
    color: #FFFFFF;
    font-size: 18px;
    font-weight: bold;
    margin: 14px 0;
    margin-left: 20px;
    width: 70px;
}

.find-btn {
    background-color: #2f8a4a;
    color: #FFFFFF;
    font-size: 18px;
    font-weight: bold;
}

.btn-ctrlfind {
    background-color: #2f8a4a;
    color: #FFFFFF;
    font-size: 16px;
    font-weight: bold;
}

.forget {
    font-size: 16px;
    color: #a1a1a1;
    margin-bottom: 15px;
    cursor: pointer;
}

.panel-main {
    width: 90%;
    max-width: 550px;
    margin: 0 auto;
}

.panel-row {
    white-space: nowrap;
    display: flex;
}

.text {
    font-size: 25px;
    color: #FFFFFF;
    margin: auto 0;
}

.atemip {
    font-size: 15px;
    font-weight: bold;
    color: #FFFFFF;
    margin: 15px 0;
    margin-left: 20px;
    width: 40%;
    padding: 10px 10px;
}

.auto-find {
    margin: auto 0;
    font-size: 20px;
    font-weight: bold;
    color: #FFFFFF;
}

.tb {
    overflow-y: auto;
    border-collapse: collapse;
    background-color: #202020;
    border: 2px solid #696969;
    border-radius: 10px;
    height: calc(100vh - 200px);
}

table {
    border-collapse: collapse;
    font-size: 17px;
    font-weight: bold;
    width: 100%;
    margin-bottom: 20px;
    background-color: #202020;
    border-radius: 20px;
}

th,
td {
    padding: 8px;
    text-align: left;
    border-bottom: 2px solid #696969;
    color: #fff;
}

th {
    background-color: #202020;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

tr:nth-child(even) {
    background-color: #000000;
}

tr:last-child td:first-child {
    border-bottom-left-radius: 10px;
}

tr:last-child td:last-child {
    border-bottom-right-radius: 10px;
}

.select-box {
    position: relative;
    width: 60px;
}

.select-box select {
    width: 100%;
    padding: 8px 16px;
    font-size: 16px;
    border: none;
    border-radius: 4px;
    background-color: #393939;
    color: #FFFFFF;
    appearance: none;
    -webkit-appearance: none;
}

.select-box:after {
    content: '\25BC';
    font-size: 14px;
    color: rgb(159, 159, 159);
    position: absolute;
    top: 50%;
    right: 12px;
    pointer-events: none;
    transform: translateY(-50%);
}

.select-box select:focus {
    outline: none;
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
}

.select-box select option[disabled] {
    display: none;
}

.select-box select option {
    font-size: 16px;
}

.setBox{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    width: 90%;
}

.setBox-title{
    font-size: 20px;
    margin-right: 25px;
}

